# python-ai-course-flask-on-aci

./: main.py  pyproject.toml
.github/workflows/: azure-dev.yaml  python-check.yaml
src/: requirements.txt
